--- a/client/src/Components/Notes/NotesMain/NotesMain.css
+++ b/client/src/Components/Notes/NotesMain/NotesMain.css
@@ -3,7 +3,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* padding: 2rem; */
   color: var(--primary);
   width: 80%!important;
 }
@@ -25,15 +24,14 @@
 .notes_main_grid {
   display: flex;
   flex-wrap: wrap;
-  /* align-items: center; */
   justify-content:space-evenly;  
+  width: 100%!important;
 }
 .notes_main > button,
 .notes_main > button .MuiSvgIcon-root {
   margin: 0 auto;
   display: flex;
   align-items: center;
-  /* width: 10%; */
   padding: .3rem;
   padding-bottom: 0;
   background-color: var(--secondary);
